fix controller tests